rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h245_2008v14_MULTIMEDIA-SYSTEM-CONTROL.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h245_2008v14_MULTIMEDIA-SYSTEM-CONTROL.asn1
---
Error matching ASN syntax at while parsing:
      ╭─[line 1404, column 2]
      │
      │ 
 1404 │  FECCapability ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 1405 │    protectedCapability  CapabilityTableEntryNumber,
 1406 │    fecScheme            OBJECT IDENTIFIER OPTIONAL,
 1407 │    -- identifies encoding scheme
 1408 │    rfc2733Format
 1409 │      CHOICE {rfc2733rfc2198   MaxRedundancy, -- RFC 2198 --
 1410 │              rfc2733sameport  MaxRedundancy,
 1411 │              -- separate packet, same port
 1412 │              rfc2733diffport  MaxRedundancy
 1413 │              -- separate packet and port} OPTIONAL,
 1414 │    ...
 1415 │  }
      │
──────╯
