rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h248.1_2005_MEDIA-GATEWAY-CONTROL.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h248.1_2005_MEDIA-GATEWAY-CONTROL.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 402, column 2]
     │
     │ 
 402 │  IndAudEventBufferDescriptor ::= SEQUENCE { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 403 │    eventName  PkgdName,
 404 │    streamID   StreamID SigList">IndAudSeqSigList ::= SEQUENCE {
 405 │    id          INTEGER(0..65535),
 406 │    signalList  IndAudSignal OPTIONAL
 407 │  }
     │
─────╯
