rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h310_1998_H310-TERMINAL-MANAGEMENT.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h310_1998_H310-TERMINAL-MANAGEMENT.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod h310_terminal_management {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct NonStandardIdentifierH221NonStandard {
        #[rasn(value("0..=255"), identifier = "t35CountryCode")]
        pub t35_country_code: u8,
        #[rasn(value("0..=255"), identifier = "t35Extension")]
        pub t35_extension: u8,
        #[rasn(value("0..=65535"), identifier = "manufacturerCode")]
        pub manufacturer_code: u16,
    }
    impl NonStandardIdentifierH221NonStandard {
        pub fn new(t35_country_code: u8, t35_extension: u8, manufacturer_code: u16) -> Self {
            Self {
                t35_country_code,
                t35_extension,
                manufacturer_code,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    pub enum NonStandardIdentifier {
        object(ObjectIdentifier),
        h221NonStandard(NonStandardIdentifierH221NonStandard),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct NonStandardParameter {
        #[rasn(identifier = "nonStandardIdentifier")]
        pub non_standard_identifier: NonStandardIdentifier,
        pub data: OctetString,
    }
    impl NonStandardParameter {
        pub fn new(non_standard_identifier: NonStandardIdentifier, data: OctetString) -> Self {
            Self {
                non_standard_identifier,
                data,
            }
        }
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct VideoFrameSynchronousCandIPDUElementaryStreamPsStreamID {
        #[rasn(value("0..=255"), identifier = "streamID")]
        pub stream_id: u8,
        #[rasn(value("0..=255"), identifier = "streamIDExtension")]
        pub stream_idextension: Option<u8>,
    }
    impl VideoFrameSynchronousCandIPDUElementaryStreamPsStreamID {
        pub fn new(stream_id: u8, stream_idextension: Option<u8>) -> Self {
            Self {
                stream_id,
                stream_idextension,
            }
        }
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum VideoFrameSynchronousCandIPDUElementaryStream {
        #[rasn(value("1..=8191"), identifier = "ts-PID")]
        ts_PID(u16),
        #[rasn(identifier = "ps-StreamID")]
        ps_StreamID(VideoFrameSynchronousCandIPDUElementaryStreamPsStreamID),
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum VideoFrameSynchronousCandIPDUVideoFrameSynchronousCandI {
        videoFrameSynchronousControl(VideoFrameSynchronousControl),
        videoFrameSynchronousIndication(VideoFrameSynchronousIndication),
    }
    #[doc = " Export all symbols"]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct VideoFrameSynchronousCandIPDU {
        #[rasn(identifier = "elementaryStream")]
        pub elementary_stream: VideoFrameSynchronousCandIPDUElementaryStream,
        #[rasn(value("0..=65535"), identifier = "resourceID")]
        pub resource_id: Option<u16>,
        #[rasn(identifier = "videoFrameSynchronousCandI")]
        pub video_frame_synchronous_cand_i: VideoFrameSynchronousCandIPDUVideoFrameSynchronousCandI,
    }
    impl VideoFrameSynchronousCandIPDU {
        pub fn new(
            elementary_stream: VideoFrameSynchronousCandIPDUElementaryStream,
            resource_id: Option<u16>,
            video_frame_synchronous_cand_i: VideoFrameSynchronousCandIPDUVideoFrameSynchronousCandI,
        ) -> Self {
            Self {
                elementary_stream,
                resource_id,
                video_frame_synchronous_cand_i,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum VideoFrameSynchronousControl {
        nonStandard(NonStandardParameter),
        videoFreezePictureReleaseControl(()),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    #[non_exhaustive]
    pub enum VideoFrameSynchronousIndication {
        nonStandard(NonStandardParameter),
        closedCaption(OctetString),
        splitScreenIndication(()),
        documentCameraIndication(()),
    }
}
