rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h323_2003-amd2_RAS-PROTOCOL-TUNNEL.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h323_2003-amd2_RAS-PROTOCOL-TUNNEL.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod ras_protocol_tunnel {
    extern crate alloc;
    use super::h323_messages::{NonStandardParameter, TunnelledProtocol};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    #[non_exhaustive]
    pub struct RasTunnelledSignallingMessage {
        #[rasn(identifier = "tunnelledProtocolID")]
        pub tunnelled_protocol_id: TunnelledProtocol,
        #[rasn(identifier = "messageContent")]
        pub message_content: SequenceOf<OctetString>,
        #[rasn(identifier = "tunnellingRequired")]
        pub tunnelling_required: Option<()>,
        #[rasn(identifier = "nonStandardData")]
        pub non_standard_data: Option<NonStandardParameter>,
    }
    impl RasTunnelledSignallingMessage {
        pub fn new(
            tunnelled_protocol_id: TunnelledProtocol,
            message_content: SequenceOf<OctetString>,
            tunnelling_required: Option<()>,
            non_standard_data: Option<NonStandardParameter>,
        ) -> Self {
            Self {
                tunnelled_protocol_id,
                message_content,
                tunnelling_required,
                non_standard_data,
            }
        }
    }
}
