rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_h_h350.2_2011_H235Identity.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_h_h350.2_2011_H235Identity.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod h235_identity {
    extern crate alloc;
    use super::authentication_framework::{
        AUTHORITY_REVOCATION_LIST, CERTIFICATE_REVOCATION_LIST, CROSS_CERTIFICATE_PAIR,
        C_ACERTIFICATE, USER_CERTIFICATE,
    };
    use super::comm_uri::H350_CR;
    use super::information_framework::*;
    use super::selected_attribute_types::{
        UnboundedDirectoryString, CASE_IGNORE_MATCH, CASE_IGNORE_SUBSTRINGS_MATCH,
        OCTET_STRING_MATCH,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static AT: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***H235_ID, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static H235_ID: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***H350_CR, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static OC: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***H235_ID, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
}
